Made Changes to p line text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<section>
 		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<p>Gotta love becoming a collaborative coder. I have made a change <br>
+			to the code. Yay.... I guess. <3</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
